--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -6,7 +6,7 @@ http {
     # Redirect HTTP to HTTPS
     server {
         listen 80;
-        server_name epoznamky.cz www.epoznamky.cz;
+        server_name epoznamky.cz www.epoznamky.cz keycloak.epoznamky.cz;
 
         # Let's Encrypt challenge
         location /.well-known/acme-challenge/ {
@@ -84,6 +84,35 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    # Keycloak Admin subdomain
+    server {
+        listen 443 ssl;
+        server_name keycloak.epoznamky.cz;
+
+        ssl_certificate /etc/letsencrypt/live/keycloak.epoznamky.cz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/keycloak.epoznamky.cz/privkey.pem;
+
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+
+        add_header Strict-Transport-Security "max-age=63072000" always;
+
+        location / {
+            proxy_pass http://keycloak:8080/;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
         }
     }
 }
