feat: files uploads

--- a/api/EpoznamkyApi/appsettings.json
+++ b/api/EpoznamkyApi/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=epoznamky;Username=postgres;Password=postgres"
+  },
+  "FileStorage": {
+    "UploadDirectory": "/app/uploads",
+    "MaxFileSizeBytes": 104857600
   }
 }
