--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -47,6 +47,7 @@ http {
 
         # API
         location /api/ {
+            client_max_body_size 101m;
             proxy_pass http://api:8080;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
