chore: namig update

--- a/api/EpoznamkyApi/appsettings.json
+++ b/api/EpoznamkyApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=epoznamky;Username=postgres;Password=postgres"
+    "DefaultConnection": "Host=localhost;Database=notes;Username=postgres;Password=postgres"
   },
   "FileStorage": {
     "UploadDirectory": "/app/uploads",
