feat: no-access, support .md files to upload

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=your-secure-password-here
 
 # GitHub Container Registry
-GITHUB_REPOSITORY=your-username/epoznamky.cz
+GITHUB_REPOSITORY=your-username/notes
