--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,8 @@
     "@blocknote/core": "^0.46.1",
     "@blocknote/mantine": "^0.46.1",
     "@blocknote/react": "^0.46.1",
+    "@blocknote/xl-docx-exporter": "^0.46.2",
+    "@blocknote/xl-pdf-exporter": "^0.46.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -46,6 +48,7 @@
     "@mui/material": "^6.1.6",
     "@mui/system": "^5.14.1",
     "@mui/x-date-pickers": "^7.26.0",
+    "@react-pdf/renderer": "^4.3.2",
     "@reduxjs/toolkit": "^2.0.0",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.7.7",
