--- a/api/EpoznamkyApi/appsettings.json
+++ b/api/EpoznamkyApi/appsettings.json
@@ -12,5 +12,8 @@
   "FileStorage": {
     "UploadDirectory": "/app/uploads",
     "MaxFileSizeBytes": 104857600
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8080/realms/notes"
   }
 }
